--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -1,18 +1,18 @@
 EVTDESC500000;The Organic Statute of the Kingdom of Poland was a Statute which replaced the Constitution of 1815 in the aftermath of the failed November Uprising in the Russian Partition. The Statute was pronounced in occupied Warsaw on March 1832 by Marshal Ivan Fyodorovich Paskevich, who named himself a namestnik. The Statute, signed by Emperor Nicholas I of Russia, replaced the personal union between the Kingdom of Poland and the Russian Empire with the 'eternal incorporation' of Poland into Russia. The Parliament of the Kingdom was abolished, and its army merged with the Russian Army. \n\n §RNOTE: Congress Poland is an extremely hard to play substate. You won't get any soldiers and when the Polish Uprising begins you will probably lose the game.§W;;;;;;;;;;;;;x
-EVTNAME500000;The Organic Statute of Poland;;;;;;;;;;;;;x
-EVTOPTA500000;When will the Poles be free?;;;;;;;;;;;;;x
+EVTNAME500000;The Organic Statute of Poland;;;;El Estatuto Orgánico de Polonia;;;;;;;;;x
+EVTOPTA500000;When will the Poles be free?;;;;¿Cuándo serán los polacos libres?;;;;;;;;;x
 EVTDESC500001;After the latest war our subjects in Poland and other parts of our empire began to grow restless. The uprising began as a spontaneous protest by young Poles against conscription into the $COUNTRY_ADJ$ Army. It was soon joined by high-ranking Polish-Lithuanian officers and various politicians. In Warsaw alone 116 demonstrations were held in $YEAR$. Much of these manifestations in ended in clashes with the $COUNTRY_ADJ$ Army. In spite of $COUNTRY_ADJ$ police interference, a symbolic meeting of hymn-singing Poles and Lithuanians took place on the bridge across an important River. The crowds sang 'God protect Poland' in Lithuanian and Belarusian. Earlier in $YEAR$ the $COUNTRY_ADJ$ government introduced a state of emergency in Kovno and Grodno as well as several other Polish-majority provinces. Public gatherings were banned and some public leaders were declared outlaws. The situation threatens to break down in anarchy. The Namestnik of the Kingdom of Poland has asked for reinforcements to duly punish these fools.;;;;;;;;;;;;;x
-EVTNAME500001;The Polish Uprising of $YEAR$;;;;;;;;;;;;;x
+EVTNAME500001;The Polish Uprising of $YEAR$;;;;La Insurrección Polaca de $YEAR$;;;;;;;;;x
 EVTOPTA500001;They dare to challenge the might of $COUNTRY$? Let them come!;;;;;;;;;;;;;x
 EVTDESC500002;Reports from the Congress Kingdom of Poland, under the $FROMCOUNTRY_ADJ$ thumb, has risen in revolt against their current masters. Across the core lands of the former Polish-Lithuanian Commonwealth, the old szlachta demand total independence from $FROMCOUNTRY$, as well as the restoration of the old Commonwealth. Many liberals within our country are demanding that we commit towards the cause of Polish freedom, but many of our more conservative elements question how such an intervention would benefit $COUNTRY$. However, things are moving fast, and if we do not make our decision soon, we may be led around by the nose by the other Great Powers. What shall be our course of action?;;;;;;;;;;;;;x
 EVTNAME500002;The Polish Uprising;;;;;;;;;;;;;x
-EVTOPTA500002;Help the Poles in any way we can.;;;;;;;;;;;;;x
+EVTOPTA500002;Help the Poles in any way we can.;;;;Ayude Polonia como sea que podamos.;;;;;;;;;x
 EVTOPTB500002;Condemn $FROMCOUNTRY$'s action.;;;;;;;;;;;;;x
 EVTOPTC500002;Stay neutral on the matter.;;;;;;;;;;;;;x
 EVTOPTD500002;Pronounce our support to $FROMCOUNTRY$.;;;;;;;;;;;;;x
 EVTDESC500003;Reports from Warsaw indicate that the Congress Kingdom of Poland, supposedly just in "personal union" with $FROMCOUNTRY$, has risen in revolt against their masters. This has been confirmed by the myraid of Polish societies and organizations based in our nation, many of which are pushing for us to support this "January Uprising."\n The cause of Poland and its people has always been one close to that of France and the French people, and now we have a chance to not only revive Napoleon I's Duchy of Warsaw, but also potentially re-establish the Commonwealth of Two Nations. With the current state of Europe being as it is, we are woefully lacking in allies, and although small, Poland has always punched well above its weight. However, any intervention for the Poles will likely mean war with $FROMCOUNTRY$, and we will likely be forced to either beg for military access from our neighbors or invade them. What shall we do, [dynamic loc for current gov type]?;;;;;;;;;;;;;x
 EVTNAME500003;A French Intervention in Poland?;;;;;;;;;;;;;x
-EVTOPTA500003;La Pologne ne sera pas perdue !;;;;;;;;;;;;;x
+EVTOPTA500003;La Pologne ne sera pas perdue !;La Pologne ne sera pas perdue !;;;¡La Polonia no será perdida!;;;;;;;;;x
 EVTOPTB500003;We shall send them every material aid we can.;;;;;;;;;;;;;x
 EVTOPTC500003;While admirable, our lack of a border limits us.;;;;;;;;;;;;;x
 EVTDESC500004;Several days ago, revolts in the Congress Kingdom of Poland broke out, and now a full-scale uprising has begun. The January Uprising, as many are calling it, has declared the formation of a Polish National Government, and demands the immediate independence of both Poland and Lithuania, and the restoration of the Commonwealth of Two Nations. Undoubtedly, this event shall determine the fate of the Poles for decades to come, and we stand in the perfect position to take advantage.\n Whilst many voices in our government are calling for us to come down against the Poles and pronounce our support to $FROMCOUNTRY$, a growing number of individuals have suggested that this might spell opportunity for $COUNTRY$. We have always maintained a relatively loose hand in Galicia-Lodomeria, and if the Poles had to choose one of the three Great Powers in Eastern Europe, it would assuredly be us. Intervening here would instantaneously increase Polish support for the Imperial Crown of Austria, and would give us significant influence over this nascent Polish state, but would also place us in a state of war with $FROMCOUNTRY$, which unquestionably maintains the largest army in Europe. What shall we do, mein Kaiser?;;;;;;;;;;;;;x
@@ -26,17 +26,17 @@ EVTOPTA500005;Dispatch General Alvensleben!;;;;;;;;;;;;;x
 EVTOPTB500005;Let us abstain, lest we incur Europe's wrath.;;;;;;;;;;;;;x
 EVTOPTC500005;Perhaps a realignment of our foreign policy is in order...;;;;;;;;;;;;;x
 EVTDESC500006;Recently, the Prussian General Carl von Alvensleben arrived in St. Petersburg, regarding the matter of the January Uprising in our Polish territories. With the other European Great Powers increasingly turning against us, he and the Prussian government have come with an offer: that $FROMCOUNTRY$ and $COUNTRY$ sign an agreement to cooperate against the Polish rebels. With our traditional Austrian allies having betrayed us during the Crimean War, this offer comes at an essential time for $FROMCOUNTRY$, especially with the French pushing for an Europe-wide intervention. However, this would also significantly enhance the position of $FROMCOUNTRY$, placing them in a significantly more robust position to accomplish their goals of uniting Germany. Shall we sign the Convention, my emperor?;;;;;;;;;;;;;x
-EVTNAME500006;The Alvensleben Proposal;;;;;;;;;;;;;x
-EVTOPTA500006;Let us sign it at once.;;;;;;;;;;;;;x
-EVTOPTB500006;We shall do no such thing!;;;;;;;;;;;;;x
+EVTNAME500006;The Alvensleben Proposal;;;;La Propuesta de Alvensleben;;;;;;;;;x
+EVTOPTA500006;Let us sign it at once.;;;;Déjanos firmarlo inmediatamente.;;;;;;;;;x
+EVTOPTB500006;We shall do no such thing!;;;;No harémos tal cosa!;;;;;;;;;x
 EVTDESC500007;General Carl von Alvensleben has returned victorious from St. Petersburg, treaty in hand. The Russians have accepted our deal for mutual military access and an alliance against the Polish rebels.;;;;;;;;;;;;;x
-EVTNAME500007;The Alvensleben Convention - Accepted;;;;;;;;;;;;;x
-EVTOPTA500007;Excellent.;;;;;;;;;;;;;x
+EVTNAME500007;The Alvensleben Convention - Accepted;;;;El Convenio de Alvensleben - Aceptado;;;;;;;;;x
+EVTOPTA500007;Excellent.;;;;Excelente.;;;;;;;;;x
 EVTDESC500008;In a secret meeting with top $COUNTRY_ADJ$ officials, General Carl von Alvensleben has notified us that $FROMCOUNTRY$ has rejected our generous offer of joint action against the Poles. It seems that $FROMCOUNTRY$ is confident in their ability to defeat the rebels despite threats of foreign intervention.;;;;;;;;;;;;;x
-EVTNAME500008;The Alvensleben Convention - Declined;;;;;;;;;;;;;x
-EVTOPTA500008;We are helpless in the face of stupidity.;;;;;;;;;;;;;x
+EVTNAME500008;The Alvensleben Convention - Declined;;;;El Convenio de Alvensleben - Denegado;;;;;;;;;x
+EVTOPTA500008;We are helpless in the face of stupidity.;;;;Estamos indefensos ante la estupidez.;;;;;;;;;x
 EVTDESC500009;Today, we recieved a collective note of protest from several other Great Powers, demanding that we cease our restoration of order to the Congress Kingdom of Poland. Clearly, these fools somehow sympathize with these hooligans, traitors to our mighty Tsar and $COUNTRY$. Seeing a chance to weaken our great country, they scurry around like rats and bugs, jumping on the first chance to "contain the Russian menace!"\n\n Many of our advisors scoff at the very notion of us bowing to these foreign bastards, and indeed, we could continue our war. However, this comes at the risk of these powers intervening and forcing us to stop through martial might. What shall we do, my Tsar?;;;;;;;;;;;;;x
-EVTNAME500009;The Paris Conference;;;;;;;;;;;;;x
+EVTNAME500009;The Paris Conference;;;;La Conferencia de Paris;;;;;;;;;x
 EVTOPTA500009;$COUNTRY$ shall not bow to anyone!;;;;;;;;;;;;;x
 EVTOPTB500009;We have no choice but to accede to their demands.;;;;;;;;;;;;;x
 EVTDESC500010;While we have committed ourselves to the defense of the Poles against the Russians, we must consider the fact that we do not border either of the two, placing us in a difficult position. Both the Polish and our own people are demanding that we send actual military aid to the Uprising, and if we don't, we will be placed in a difficult position. However, if the Germans were to give us access, then we could easily help our allies, and possibly even rope them into the intervention. Shall we send our demand for military access, my emperor?;;;;;;;;;;;;;x
@@ -65,7 +65,7 @@ EVTDESC500016;For too long the lands of Poland have been partitioned and divided
 EVTNAME500016;A Polish State;;;;;;;;;;;;;x
 EVTOPTA500016;We will unite!;;;;;;;;;;;;;x
 EVTOPTB500016;We enjoy independence too much.;;;;;;;;;;;;;x
-EVTDESC500017;We have won.;;;;;;;;;;;;;x
+EVTDESC500017;We have won.;;;;Hemos ganado.;;;;;;;;;x
 EVTNAME500017;The Commonwealth Victorious;;;;;;;;;;;;;x
 EVTOPTA500017;Poland is not yet lost!;;;;;;;;;;;;;x
 EVTDESC500018;Somehow, despite our overwhelming material advantage, Polish forces have managed to repel our forces. While the damned foreign powers were already sympathetic to these Polish malcontents, they are now demanding that we withdraw fully from Poland and Lithuania, and recognize their rights as a sovereign country. While our advisors initially scoffed at this "offer," mounting international pressure and threats of collective Great Power intervention have forced us to the negotiating table, where our ambassadors were pressured into signing a treaty recognizing Polish sovereignty.;;;;;;;;;;;;;x
@@ -90,12 +90,12 @@ XEVTOPTA5000180;Death to the rebels! Long live the Tsar!;;;;;;;;;;;;;x
 XEVTOPTB5000180;This is unwinnable. We must let them go.;;;;;;;;;;;;;x
 EVTDESC500600;Foreign Aid;;;;;;;;;;;;;x
 EVTNAME500600;We can request aid from friendly Great Powers.;;;;;;;;;;;;;x
-EVTOPTA500600;Let us nationalize stuff.;;;;;;;;;;;;;x
-EVTOPTB500600;Let us ask the French.;;;;;;;;;;;;;x
-EVTOPTC500600;Let us ask the Austrians.;;;;;;;;;;;;;x
-EVTOPTD500600;Let us ask the Prussians.;;;;;;;;;;;;;x
-EVTDESC500601;Nationalization Page 1;;;;;;;;;;;;;x
-EVTNAME500601;Nationalization Page 1;;;;;;;;;;;;;x
+EVTOPTA500600;Let us nationalize foreign assets.;;;;Déjanos nacionalizar activos extranjeros.;;;;;;;;;x
+EVTOPTB500600;Let us ask the French.;;;;Déjanos pedir el francés.;;;;;;;;;x
+EVTOPTC500600;Let us ask the Austrians.;;;;Déjanos pedir los austriacos.;;;;;;;;;x
+EVTOPTD500600;Let us ask the Prussians.;;;;Déjanos pedir los prusianos.;;;;;;;;;x
+EVTDESC500601;Nationalization - Page 1;;;;Nacionalización - Página 1;;;;;;;;;x
+EVTNAME500601;Nationalization - Page 1;;;;Nacionalización - Página 1;;;;;;;;;x
 EVTOPTA500601;Factory Debuff;;;;;;;;;;;;;x
 EVTOPTB500601;Military Debuff;;;;;;;;;;;;;x
 EVTOPTC500601;Financial Debuff;;;;;;;;;;;;;x
