did first five provs

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3529,42 +3529,42 @@ PROV3527;Polotsk;;;;;;;;;;;;;x
 PROV3528;Sebezh;;;;;;;;;;;;;x
 PROV3529;Rezekne;;;;;;;;;;;;;x
 PROV3530;Ludza;;;;;;;;;;;;;x
-PROV3531;Valle de los Pericos;;;;;;;;;;;;;x
-PROV3532;Iruya;;;;;;;;;;;;;x
-PROV3533;Lantaj Wumek;;;;;;;;;;;;;x
-PROV3534;Valle Rico;;;;;;;;;;;;;x
-PROV3535;Chaabolek’ Laurepi;;;;;;;;;;;;;x
-PROV3536;Machagai;;;;;;;;;;;;;x
-PROV3537;San Miguel;;;;;;;;;;;;;x
-PROV3538;Incahuasi;;;;;;;;;;;;;x
-PROV3539;Valle de la Luna;;;;;;;;;;;;;x
-PROV3540;Tikopillan;;;;;;;;;;;;;x
-PROV3541;Wataqunchu;;;;;;;;;;;;;x
-PROV3542;Tacuri;;;;;;;;;;;;;x
-PROV3543;Tupiza;;;;;;;;;;;;;x
-PROV3544;Tarairí;;;;;;;;;;;;;x
-PROV3545;Apolobamba;;;;;;;;;;;;;x
-PROV3546;Zapitalanes;;;;;;;;;;;;;x
-PROV3547;Guairiguaza;;;;;;;;;;;;;x
-PROV3548;Huirapitindi;;;;;;;;;;;;;x
-PROV3549;Kaa-Iya;;;;;;;;;;;;;x
-PROV3550;Otuquis;;;;;;;;;;;;;x
-PROV3551;Chaynez;;;;;;;;;;;;;x
-PROV3552;Komarek;;;;;;;;;;;;;x
-PROV3553;La Santísima Trinidad;;;;;;;;;;;;;x
-PROV3554;Santa Ana del Yacuma;;;;;;;;;;;;;x
-PROV3555;Capihuara;;;;;;;;;;;;;x
-PROV3556;Machavi;;;;;;;;;;;;;x
-PROV3557;Tambaqui;;;;;;;;;;;;;x
-PROV3558;ñu Guazu;;;;;;;;;;;;;x
-PROV3559;Cabichu-i;;;;;;;;;;;;;x
-PROV3560;Igaronos;;;;;;;;;;;;;x
-PROV3561;Quebrachal;;;;;;;;;;;;;x
-PROV3562;Chambi;;;;;;;;;;;;;x
-PROV3563;East Curupayty;;;;;;;;;;;;;x
-PROV3564;Albarenda;;;;;;;;;;;;;x
-PROV3565;Nivaclé-manjui;;;;;;;;;;;;;x
-PROV3566;Labrador de Curuguaty;;;;;;;;;;;;;x
+PROV3531;Osumi;;;;;;;;;;;;;x
+PROV3532;Kushima;;;;;;;;;;;;;x
+PROV3533;Nichinan;;;;;;;;;;;;;x
+PROV3534;Saito;;;;;;;;;;;;;x
+PROV3535;Takanabe;;;;;;;;;;;;;x
+PROV3536;Shiiba;;;;;;;;;;;;;x
+PROV3537;Hyuga;;;;;;;;;;;;;x
+PROV3538;Saiki;;;;;;;;;;;;;x
+PROV3539;Bungoono;;;;;;;;;;;;;x
+PROV3540;Usuki;;;;;;;;;;;;;x
+PROV3541;Oita;;;;;;;;;;;;;x
+PROV3542;Kusu;;;;;;;;;;;;;x
+PROV3543;Hiji;;;;;;;;;;;;;x
+PROV3544;Kunisaki;;;;;;;;;;;;;x
+PROV3545;Usa;;;;;;;;;;;;;x
+PROV3546;Nakatsu;;;;;;;;;;;;;x
+PROV3547;Hita;;;;;;;;;;;;;x
+PROV3548;Buzen;;;;;;;;;;;;;x
+PROV3549;Fukuoka;;;;;;;;;;;;;x
+PROV3550;Karatsu;;;;;;;;;;;;;x
+PROV3551;Saga;;;;;;;;;;;;;x
+PROV3552;Omura;;;;;;;;;;;;;x
+PROV3553;Goto Islands;;;;;;;;;;;;;x
+PROV3554;Unzen;;;;;;;;;;;;;x
+PROV3555;Kurume;;;;;;;;;;;;;x
+PROV3556;Chikugo;;;;;;;;;;;;;x
+PROV3557;Hiyotoshi;;;;;;;;;;;;;x
+PROV3558;Amakusa;;;;;;;;;;;;;x
+PROV3559;Uwajima;;;;;;;;;;;;;x
+PROV3560;Matsuyama;;;;;;;;;;;;;x
+PROV3561;Imabare;;;;;;;;;;;;;x
+PROV3562;Saijo;;;;;;;;;;;;;x
+PROV3563;Niihama;;;;;;;;;;;;;x
+PROV3564;Marugame;;;;;;;;;;;;;x
+PROV3565;Takamatsu;;;;;;;;;;;;;x
+PROV3566;Awaji;;;;;;;;;;;;;x
 PROV3567;Encarnacion;;;;;;;;;;;;;x
 PROV3568;Villarrica del Espíritu Santo;;;;;;;;;;;;;x
 PROV3569;Cabeza del Buey;;;;;;;;;;;;;x
