added 4th set of five

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -1658,7 +1658,7 @@ PROV1656;Wakayama;;;;;;;;;;;;;x
 PROV1657;Kyoto;;;;;;;;;;;;;x
 PROV1658;Nara;;;;;;;;;;;;;x
 PROV1659;Kobe;;;;;;;;;;;;;x
-PROV1660;Fukuoka;;;;;;;;;;;;;x
+PROV1660;Sasebo;;;;;;;;;;;;;x
 PROV1661;Nagasaki;;;;;;;;;;;;;x
 PROV1662;Kagoshima;;;;;;;;;;;;;x
 PROV1663;Miyazaki;;;;;;;;;;;;;x
