added last round of kyushu provs

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3565,20 +3565,20 @@ PROV3563;Niihama;;;;;;;;;;;;;x
 PROV3564;Marugame;;;;;;;;;;;;;x
 PROV3565;Takamatsu;;;;;;;;;;;;;x
 PROV3566;Awaji;;;;;;;;;;;;;x
-PROV3567;Encarnacion;;;;;;;;;;;;;x
-PROV3568;Villarrica del Espíritu Santo;;;;;;;;;;;;;x
-PROV3569;Cabeza del Buey;;;;;;;;;;;;;x
-PROV3570;Pwel-Cusu Leuvú;;;;;;;;;;;;;x
-PROV3571;Chimpay;;;;;;;;;;;;;x
-PROV3572;Malal Hue;;;;;;;;;;;;;x
-PROV3573;Cochequingán;;;;;;;;;;;;;x
-PROV3574;Traf Trequén;;;;;;;;;;;;;x
-PROV3575;Villa de Melo;;;;;;;;;;;;;x
-PROV3576;Villa Atamisqui;;;;;;;;;;;;;x
-PROV3577;Rosario;;;;;;;;;;;;;x
-PROV3578;Lha Ni'Whayaj;;;;;;;;;;;;;x
-PROV3579;Sauce Chico;;;;;;;;;;;;;x
-PROV3580;Yacuy-ighba;;;;;;;;;;;;;x
+PROV3567;Amami;;;;;;;;;;;;;x
+PROV3568;Yakushima;;;;;;;;;;;;;x
+PROV3569;Tanegashima;;;;;;;;;;;;;x
+PROV3570;Miyazaki;;;;;;;;;;;;;x
+PROV3571;Iki;;;;;;;;;;;;;x
+PROV3572;Hirado;;;;;;;;;;;;;x
+PROV3573;Isahaya;;;;;;;;;;;;;x
+PROV3574;Kashima;;;;;;;;;;;;;x
+PROV3575;Imari;;;;;;;;;;;;;x
+PROV3576;Ogi;;;;;;;;;;;;;x
+PROV3577;Akizuki;;;;;;;;;;;;;x
+PROV3578;Uto;;;;;;;;;;;;;x
+PROV3579;Miike;;;;;;;;;;;;;x
+PROV3580;Hososhima;;;;;;;;;;;;;x
 PROV3581;Pikun-K'la-Rome-Kó;;;;;;;;;;;;;x
 PROV3582;Ancaló;;;;;;;;;;;;;x
 PROV3583;Alun-Lauquen;;;;;;;;;;;;;x
