added last few new provs for shikoku

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3579,10 +3579,10 @@ PROV3577;Akizuki;;;;;;;;;;;;;x
 PROV3578;Uto;;;;;;;;;;;;;x
 PROV3579;Miike;;;;;;;;;;;;;x
 PROV3580;Hososhima;;;;;;;;;;;;;x
-PROV3581;Pikun-K'la-Rome-Kó;;;;;;;;;;;;;x
-PROV3582;Ancaló;;;;;;;;;;;;;x
-PROV3583;Alun-Lauquen;;;;;;;;;;;;;x
-PROV3584;Soywen Lavken;;;;;;;;;;;;;x
+PROV3581;Tadotsu;;;;;;;;;;;;;x
+PROV3582;Yawatahama;;;;;;;;;;;;;x
+PROV3583;Yoshida;;;;;;;;;;;;;x
+PROV3584;Shodoshima;;;;;;;;;;;;;x
 PROV3585;Neyku-ñan;;;;;;;;;;;;;x
 PROV3586;Chemecó;;;;;;;;;;;;;x
 PROV3587;Currarru;;;;;;;;;;;;;x
