debugging chugoku - did first 6 provs

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3583,35 +3583,35 @@ PROV3581;Tadotsu;;;;;;;;;;;;;x
 PROV3582;Yawatahama;;;;;;;;;;;;;x
 PROV3583;Yoshida;;;;;;;;;;;;;x
 PROV3584;Shodoshima;;;;;;;;;;;;;x
-PROV3585;Neyku-ñan;;;;;;;;;;;;;x
-PROV3586;Chemecó;;;;;;;;;;;;;x
-PROV3587;Currarru;;;;;;;;;;;;;x
-PROV3588;Choique Lóo;;;;;;;;;;;;;x
-PROV3589;Pukysiyako;;;;;;;;;;;;;x
-PROV3590;Santa María de los Ángeles de Yocavil;;;;;;;;;;;;;x
-PROV3591;Martín García;;;;;;;;;;;;;x
-PROV3592;Lechiguanas;;;;;;;;;;;;;x
-PROV3593;Jaaukanigás;;;;;;;;;;;;;x
-PROV3594;Huchupayana;;;;;;;;;;;;;x
-PROV3595;Kütü Walata;;;;;;;;;;;;;x
-PROV3596;Pucaullhué;;;;;;;;;;;;;x
-PROV3597;Toay;;;;;;;;;;;;;x
-PROV3598;Naincó;;;;;;;;;;;;;x
-PROV3599;Chilihué;;;;;;;;;;;;;x
-PROV3600;Vacas;;;;;;;;;;;;;x
-PROV3601;Mandisoví;;;;;;;;;;;;;x
-PROV3602;San Miguel;;;;;;;;;;;;;x
-PROV3603;Aachen;;;;;;;;;;;;;x
-PROV3604;Gera;;;;;;;;;;;;;x
-PROV3605;Feldsberg;;;;;;;;;;;;;x
-PROV3606;Damasi;;;;;;;;;;;;;x
-PROV3607;Arpi;;;;;;;;;;;;;x
-PROV3608;Dustan;;;;;;;;;;;;;x
-PROV3609;Hakkari;;;;;;;;;;;;;x
-PROV3610;Ridvan;;;;;;;;;;;;;x
-PROV3611;Kochisar;;;;;;;;;;;;;x
-PROV3612;Qotur;;;;;;;;;;;;;x
-PROV3613;Viransehir;;;;;;;;;;;;;x
+PROV3585;Akamagaseki;;;;;;;;;;;;;x
+PROV3586;Yamaguchi;;;;;;;;;;;;;x
+PROV3587;Tokuyama;;;;;;;;;;;;;x
+PROV3588;Hirao;;;;;;;;;;;;;x
+PROV3589;Tsuwano;;;;;;;;;;;;;x
+PROV3590;Hamada;;;;;;;;;;;;;x
+PROV3591;Oda;;;;;;;;;;;;;x
+PROV3592;Matsue;;;;;;;;;;;;;x
+PROV3593;Hirose;;;;;;;;;;;;;x
+PROV3594;Oki;;;;;;;;;;;;;x
+PROV3595;Tottori;;;;;;;;;;;;;x
+PROV3596;Iwakuni;;;;;;;;;;;;;x
+PROV3597;Ube;;;;;;;;;;;;;x
+PROV3598;Kure;;;;;;;;;;;;;x
+PROV3599;Mihara;;;;;;;;;;;;;x
+PROV3600;Fukuyama;;;;;;;;;;;;;x
+PROV3601;Uemachi;;;;;;;;;;;;;x
+PROV3602;Niimi;;;;;;;;;;;;;x
+PROV3603;Takahashi;;;;;;;;;;;;;x
+PROV3604;Nariwa;;;;;;;;;;;;;x
+PROV3605;Ashimori;;;;;;;;;;;;;x
+PROV3606;Soja;;;;;;;;;;;;;x
+PROV3607;Okada;;;;;;;;;;;;;x
+PROV3608;Niwase;;;;;;;;;;;;;x
+PROV3609;Kasaoka;;;;;;;;;;;;;x
+PROV3610;Kamogata;;;;;;;;;;;;;x
+PROV3611;Kurashiki;;;;;;;;;;;;;x
+PROV3612;Okayama;;;;;;;;;;;;;x
+PROV3613;Katsuyama;;;;;;;;;;;;;x
 PROV3614;Penjwin;;;;;;;;;;;;;x
 PROV3615;Kalar;;;;;;;;;;;;;x
 PROV3616;Qasr-e Shirin;;;;;;;;;;;;;x
