--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -1661,10 +1661,10 @@ PROV1659;Kobe;;;;;;;;;;;;;x
 PROV1660;Sasebo;;;;;;;;;;;;;x
 PROV1661;Nagasaki;;;;;;;;;;;;;x
 PROV1662;Kagoshima;;;;;;;;;;;;;x
-PROV1663;Miyazaki;;;;;;;;;;;;;x
+PROV1663;Miyakonojo;;;;;;;;;;;;;x
 PROV1664;Kumamoto;;;;;;;;;;;;;x
 PROV1665;Kochi;;;;;;;;;;;;;x
-PROV1666;Matsuyama;;;;;;;;;;;;;x
+PROV1666;Ozu;;;;;;;;;;;;;x
 PROV1667;Tokushima;;;;;;;;;;;;;x
 PROV1668;Sendai;;;;;;;;;;;;;x
 PROV1669;Fukushima;;;;;;;;;;;;;x
@@ -3529,37 +3529,37 @@ PROV3527;Polotsk;;;;;;;;;;;;;x
 PROV3528;Sebezh;;;;;;;;;;;;;x
 PROV3529;Rezekne;;;;;;;;;;;;;x
 PROV3530;Ludza;;;;;;;;;;;;;x
-PROV3531;Osumi;;;;;;;;;;;;;x
+PROV3531;Kajiki;;;;;;;;;;;;;x
 PROV3532;Kushima;;;;;;;;;;;;;x
-PROV3533;Nichinan;;;;;;;;;;;;;x
-PROV3534;Saito;;;;;;;;;;;;;x
+PROV3533;Obi;;;;;;;;;;;;;x
+PROV3534;Sadowara;;;;;;;;;;;;;x
 PROV3535;Takanabe;;;;;;;;;;;;;x
-PROV3536;Shiiba;;;;;;;;;;;;;x
-PROV3537;Hyuga;;;;;;;;;;;;;x
-PROV3538;Saiki;;;;;;;;;;;;;x
-PROV3539;Bungoono;;;;;;;;;;;;;x
+PROV3536;Shimohokita;;;;;;;;;;;;;x
+PROV3537;Nobeoka;;;;;;;;;;;;;x
+PROV3538;Saeki;;;;;;;;;;;;;x
+PROV3539;Oka;;;;;;;;;;;;;x
 PROV3540;Usuki;;;;;;;;;;;;;x
-PROV3541;Oita;;;;;;;;;;;;;x
-PROV3542;Kusu;;;;;;;;;;;;;x
+PROV3541;Funai;;;;;;;;;;;;;x
+PROV3542;Hita;;;;;;;;;;;;;x
 PROV3543;Hiji;;;;;;;;;;;;;x
-PROV3544;Kunisaki;;;;;;;;;;;;;x
-PROV3545;Usa;;;;;;;;;;;;;x
+PROV3544;Kitsuki;;;;;;;;;;;;;x
+PROV3545;Takada;;;;;;;;;;;;;x
 PROV3546;Nakatsu;;;;;;;;;;;;;x
-PROV3547;Hita;;;;;;;;;;;;;x
-PROV3548;Buzen;;;;;;;;;;;;;x
+PROV3547;Kusu;;;;;;;;;;;;;x
+PROV3548;Kokura;;;;;;;;;;;;;x
 PROV3549;Fukuoka;;;;;;;;;;;;;x
 PROV3550;Karatsu;;;;;;;;;;;;;x
 PROV3551;Saga;;;;;;;;;;;;;x
 PROV3552;Omura;;;;;;;;;;;;;x
-PROV3553;Goto Islands;;;;;;;;;;;;;x
-PROV3554;Unzen;;;;;;;;;;;;;x
+PROV3553;Goto;;;;;;;;;;;;;x
+PROV3554;Shimabara;;;;;;;;;;;;;x
 PROV3555;Kurume;;;;;;;;;;;;;x
-PROV3556;Chikugo;;;;;;;;;;;;;x
+PROV3556;Yanagawa;;;;;;;;;;;;;x
 PROV3557;Hiyotoshi;;;;;;;;;;;;;x
 PROV3558;Amakusa;;;;;;;;;;;;;x
 PROV3559;Uwajima;;;;;;;;;;;;;x
 PROV3560;Matsuyama;;;;;;;;;;;;;x
-PROV3561;Imabare;;;;;;;;;;;;;x
+PROV3561;Imabari;;;;;;;;;;;;;x
 PROV3562;Saijo;;;;;;;;;;;;;x
 PROV3563;Niihama;;;;;;;;;;;;;x
 PROV3564;Marugame;;;;;;;;;;;;;x
