added burgundy formable

--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -435,9 +435,14 @@ BAV_proletarian_dictatorship;Socialist Bavarian Republic;;;;;;;;;;;;;x
 BAV_prussian_constitutionalism;Kingdom of Bavaria;;;;;;;;;;;;;x
 BEL_colonial_company;Zuidelijke Nederlanden;;;;;;;;;;;;;x
 BER_colonial_company;Gujarat Agency;;;;;;;;;;;;;x
-BRG_absolute_moarchy;Duchy of Burgundy;;;;;;;;;;;;;x
+BRG_absolute_monarchy;Duchy of Burgundy;;;;;;;;;;;;;x
+BRG_absolute_monarchy2;Kingdom of Burgundy;;;;;;;;;;;;;x
 BRG_prussian_constitutionalism;Duchy of Burgundy;;;;;;;;;;;;;x
+BRG_prussian_constitutionalism2;Kingdom of Burgundy;;;;;;;;;;;;;x
 BRG_hms_government;Duchy of Burgundy;;;;;;;;;;;;;x
+BRG_hms_government2;Kingdom of Burgundy;;;;;;;;;;;;;x
+BRG_democracy;Burgundian Republic;;;;;;;;;;;;;x
+BRG_democracy2;Lotharingian Republic;;;;;;;;;;;;;x
 BRG_bourgeois_dictatorship;States-General of Burgundy;;;;;;;;;;;;;x
 BRG_fascist_dictatorship;Burgundian State;;;;;;;;;;;;;x
 BRG_proletarian_dictatorship;Union of the Sovereign Provinces of the Netherlands & Burgundy;;;;;;;;;;;;;x
