added north sea empire

--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -845,6 +845,18 @@ DBT_prussian_constitutionalism2;Derbent Emirate;;;;;;;;;;;;;x
 DBT_rus_colonial_company;Derbent District;;;;;;;;;;;;;x
 DBT_rus_dominion;Derbent District;;;;;;;;;;;;;x
 DBT_tur_colonial_company;Derbent Vilayet;;;;;;;;;;;;;x
+DEN_absolute_monarchy;Kingdom of Denmark;;;;;;;;;;;;;x
+DEN_absolute_monarchy2;North Sea Empire;;;;;;;;;;;;;x
+DEN_bourgeois_dictatorship;Danish Republic;;;;;;;;;;;;;x
+DEN_democracy;Danish Republic;;;;;;;;;;;;;x
+DEN_democracy2;Northern Republic;;;;;;;;;;;;;x
+DEN_fascist_dictatorship;Danish State;;;;;;;;;;;;;x
+DEN_hms_government;Kingdom of Denmark;;;;;;;;;;;;;x
+DEN_hms_government2;North Sea Empire;;;;;;;;;;;;;x
+DEN_presidential_dictatorship;Danish Republic;;;;;;;;;;;;;x
+DEN_proletarian_dictatorship;Danish Socialist Republic;;;;;;;;;;;;;x
+DEN_prussian_constitutionalism;Kingdom of Denmark;;;;;;;;;;;;;x
+DEN_prussian_constitutionalism2;North Sea Empire;;;;;;;;;;;;;x
 DG0_absolute_monarchy;Khoshany;;;;;;;;;;;;;x
 DG0_bourgeois_dictatorship;Aghulistan;;;;;;;;;;;;;x
 DG0_democracy;Djamaats of Khoshany;;;;;;;;;;;;;x
