--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1632,3 +1632,5 @@ tourism_campaign;Tourism and Settlement Campaign;;;;;;;;;;;;;;
 tourism_campaign_desc;We are giving incentives to new settlers.;;;;;;;;;;;;;;
 paraguay_is_ours;Paraguay is ours!;;;;;;;;;;;;;;
 cisplatina_is_ours;Cisplatina is ours!;;;;;;;;;;;;;;
+otto_of_greece;Otto of Greece;;;;;;;;;;;;;x
+otto_of_greece_desc;Assuming the title "King of Greece" as established via the Convention of London, Otto sees himself as an enlightened absolutist and seeks to modernize Greece.;;;;;;;;;;;;;x
