--- a/TGC/localisation/00_events_1000000.csv
+++ b/TGC/localisation/00_events_1000000.csv
@@ -764,29 +764,29 @@ EVTDESC9000011;We have lost. Our Fatherland is in rubble. As the losers we must 
 EVTNAME9000011;Treaty of German Containment;;;;;;;;;;;;;x
 EVTOPTA9000011;This is the End;;;;;;;;;;;;;x
 EVTNAME9111111;The Dutch Question;;;;;;;;;;;;;x
-EVTDESC9111111;The meeting we called over the status of our Dutch neighbors has nearly come to and end, though there is a split between our top officals on how excatly the solution should look like. The militarist are calling for the full invasion of the Lowlands and integrating the Netherlands and Flanders with the French port of Dunkerque. The militarist have already laid out their plan for the invasion, though it is expected that the invasion will attract the attention the Russians and British. The moderates see the value of the lowlands vastly overstated and to much of a strain on the nation to maintain control over them. §RNOTE: The peacedeal will be offered to you by an event should you manage to peace out French, the Dutch, and Belgium (should they exist).§W;;;;;;;;;;;;;x
-EVTOPTA9111111;The Militarist are correct prepare for war!;;;;;;;;;;;;;x
-EVTOPTB9111111;Support the Moderates!;;;;;;;;;;;;;x
-EVTOPTC9111111;Maybe at a later date.;;;;;;;;;;;;;x
-EVTDESC9111112;We have gotten word that the Germans are preparing for war on us. They are seeking to annex our Dutch and Flemish lands into their nation. It is only a matter of time before the strike!;;;;;;;;;;;;;x
+EVTDESC9111111;For decades, pan-Germanists have sought to unite all of Germany under one banner. We - as $COUNTRY$ - stand as the culmination of those decades of struggle, now commanding a great state that unites Germans from the Belt to Krain. However, there remains one region that has been left out - our Dutch brothers and sisters - that still labors under the yoke of archaic divisions from a time long gone. Many are calling for us to liberate the Netherlands and see them united with their brethren, so that $COUNTRY$ may truly reach from the Maas to the Memel as it does from the Adige to the Belt. However, it is sure that the other Great Powers - particularly Britain, France, and Russia - will not take kindly to such claims, and would be likely to intervene. Additionally, some have expressed concerns over the difficulty of integrating the Frisians, Dutch, and Flemish into our country. What shall we do, mein $MONARCHTITLE$?\n\n §RNOTE: The peacedeal will be offered to you by an event should you manage to peace out the other side.§W;;;;;;;;;;;;;x
+EVTOPTA9111111;Das ganze Deutschland soll es sein!;;;;;;;;;;;;;x
+EVTOPTB9111111;It is too dangerous.;;;;;;;;;;;;;x
+EVTOPTC9111111;We must discuss this further.;;;;;;;;;;;;;x
+EVTDESC9111112;It has always been known that pan-Germanists have had designs on our Dutch and Flemish lands - yet we always thought that these ideas were on the fringe, not worth considering. However, the $FROMCOUNTRY_ADJ$ ambassador has delivered a note from their government, demanding that we immediately join $FROMCOUNTRY$! This is obviously outrageous, and our $MONARCHTITLE$ made this clear to the $FROMCOUNTRY_ADJ$ ambassador in explicit terms. Even so, it is clear that we likely cannot stand against $FROMCOUNTRY$ by ourselves - additionally, this represents a grave threat to the balance of power. Therefore, we can and should call on the assistance of the Great Powers alongside preparing ourselves for the impending invasion.;;;;;;;;;;;;;x
 EVTNAME9111112;The German Menace;;;;;;;;;;;;;x
-EVTOPTA9111112;Outrageous, inform the Great Powers!;;;;;;;;;;;;;x
-EVTDESC9111113;The top officals from countries of the Lowlands have come to our capital today to inform us of the German preperations for the annexations of most of the region. They are asking for our help against the Germans should the attack, the documents laid forth seem legit and would mean disaster for the balance of power.;;;;;;;;;;;;;x
+EVTOPTA9111112;See it done - inform the Great Powers!;;;;;;;;;;;;;x
+EVTDESC9111113;The top officals from countries of the Lowlands have come to our capital today to inform us of the German demand for full annexation, and are requesting that we help them against the Germans. The realization of this plan would mean disaster for the balance of power, and would further strengthen Germany - already one of the strongest and most dangerous powers in Europe. However, as always, wars are costly and expensive, and this one would likely be no different. What shall we do, my $MONARCHTITLE$;;;;;;;;;;;;;x
 EVTNAME9111113;The German Menace;;;;;;;;;;;;;x
-EVTOPTA9111113;Tell them that we shall support them!;;;;;;;;;;;;;x
-EVTOPTB9111113;Not our problem!;;;;;;;;;;;;;x
-EVTDESC9111114;$FROMCOUNTRY$ has decided to join forces with us in case of a German invasion. We stand together.;;;;;;;;;;;;;x
+EVTOPTA9111113;Assure them of our fullest support.;;;;;;;;;;;;;x
+EVTOPTB9111113;Why should we give a jot about $FROMCOUNTRY$?;;;;;;;;;;;;;x
+EVTDESC9111114;$FROMCOUNTRY$ has decided to join forces with us in case of a German invasion. We stand together, in the name of peace and the balance of power.;;;;;;;;;;;;;x
 EVTNAME9111114;$FROMCOUNTRY$ Supports Us;;;;;;;;;;;;;x
-EVTOPTA9111114;Glory to us!;;;;;;;;;;;;;x
-EVTDESC9111115;$FROMCOUNTRY$ has decided to not help us in case of a German invasion, the shall have to answer their grandchildren why the let us fall in German hands.;;;;;;;;;;;;;x
+EVTOPTA9111114;Excellent news!;;;;;;;;;;;;;x
+EVTDESC9111115;$FROMCOUNTRY$ has decided to not help us in case of a German invasion - they shall go down in the history books as nothing more than German bootlickers!;;;;;;;;;;;;;x
 EVTNAME9111115;$FROMCOUNTRY$ Abandoned Us;;;;;;;;;;;;;x
-EVTOPTA9111115;Their cowardace will be remembered!;;;;;;;;;;;;;x
-EVTDESC9111116;The preperations are completed and the Army is ready to go. The declaration has been send, we hope for a quick victory.;;;;;;;;;;;;;x
+EVTOPTA9111115;Their cowardice will be remembered!;;;;;;;;;;;;;x
+EVTDESC9111116;After multiple sessions of lengthy negotiations, the $MONARCHTITLE$ of $FROMCOUNTRY$ refused to budge even an inch, even spitting in our ambassador's face! Although we had hoped to see our Dutch brothers and sisters united peacefully with their German brethren, it seems that we have no choice but to fight. Even a number of Great Powers have decided to intervene, clearly fearing the combined power of all the German peoples! However, we shall not back down - we shall set this right - we shall liberate the Dutch people!;;;;;;;;;;;;;x
 EVTNAME9111116;The Lowland Invasion;;;;;;;;;;;;;x
 EVTOPTA9111116;Onwards!;;;;;;;;;;;;;x
-EVTDESC9111117;Our victory on all fronts has made all our enemys bend their knee to our might. We have won and they lost, our peace treaty will ensure our demands are meet. The Germans shall be united!;;;;;;;;;;;;;x
+EVTDESC9111117;Despite having to fight the Dutch and multiple Great Powers, $COUNTRY$ has emerged triumphant! The defeated powers have requested an immediate armistice - which our gracious $MONARCHTITLE$ has granted - and have submitted to all of our terms. All Dutch, Flemish, or Frisian lands shall be immediately annexed into the $COUNTRY_ADJ$ realm - the Walloon lands shall be formed into a client state under our benevolent guidance and protection. However, over the course of the war, all of the colonies or overseas territories held by the annexed countries have already been quietly - or not-so-quietly - seized by their erstwhile allies. Although we may not have gotten everything, we can be proud of how we have finally united all Germans under one banner.;;;;;;;;;;;;;x
 EVTNAME9111117;The Treaty of Amsterdam $YEAR$;;;;;;;;;;;;;x
-EVTOPTA9111117;Germans must be united everywhere!;;;;;;;;;;;;;x
+EVTOPTA9111117;Von der Maas bis an die Memel - Von der Etsch bis an den Belt!;;;;;;;;;;;;;x
 EVTDESC9149119;The Confederate delegation has accepted our invitation to St. Louis and have agreed to ratify a treaty of mutual support and friendship. Along with the recognition Louisianan claims over the lands of the Mississippi River Basin, the Treaty of St. Louis has resulted in the creation of an alliance between the two southern nations.;;;;;;;;;;;;;x
 EVTNAME9149119;Success in St. Louis;;;;;;;;;;;;;x
 EVTOPTA9149119;Southern Solidarity!;;;;;;;;;;;;;x
